--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,11 @@
     <head>
        <link rel="stylesheet" type="text/css" href="styles.css">
        <a class="button" type="button" href="contact.html">Contact</a>
-       <a class="button" type="button" href="me.html">Proflie</a>
-       <a class="button" type="button">something else</a>
+       <a class="button" type="button" href="index.html">Proflie</a>
 
        </head>
        <body>
-           <h1>student bio</h1>
+           <h1>My Contact Info</h1>
             <h2 class="student-name">Adam Olson</h2>
        </body>
     <br>
