--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <!DOCTYPE HTML>
 <html lang=en-us>
     <head>
-       <link rel="stylesheet" type="text/css" href="styles.css">
-       <a class="button" type="button" href="contact.html">Contact</a>
-       <a class="button" type="button" href="profile.html">Profile</a>
+        <link rel="stylesheet" type="text/css" href="styles.css">
+        <a class="button" type="button" href="contact.html">Contact</a>
+        <a class="button" type="button" href="index.html">Profile</a>
 
     </head>
 
@@ -17,7 +17,7 @@
     <div class="div-one">
     <h2 class="student-name">Adam Olson</h2>
     </div>
-    <a class="image"href="https://imgur.com/etssov1"><img src="https://i.imgur.com/etssov1.jpg" title="source: imgur.com" /></a>
+    <img class="image" src="https://i.imgur.com/etssov1.jpg">
     <div>
     <br>
     <h2>Profile</h2>
